testsuite/negative/return-type.n
class M {
  static g () : string { 3 }    // E: expected string.*, got int in function body
  static h () : void { ().x = 4 }    // E: there is no member named `x' in void
}
class A { public this () {} }

class B {
  f1 () : void { null } // W: ignored

  static f ['a] (_ : 'a) : 'a where 'a : A { A() }        // E: expected 'a.*, got A in function body
}

class X {
  static f () : void { 
    def g () : int { () }; // E: expected int.*, got void in function body
    def h () : int {  }; // E: expected int.*, got void in function body
    def _ = g () + h ();
    () 
  }
}


module NullToTuple
{
  goo () : int * int // E: expected \(int \* int\), got .* in function body \(goo\): the .null. literal is
  {
    null
  }
  
  Main () : void {
    def _ = goo ();
    ()
  }
}
